# android_jnihelper

./: .gitignore  README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/zkk/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Alog-priv.h  JNIHelp.cpp  JNIHelp.h
app/src/main/cpp/jnihelper/: CMakeLists.txt  JNIHelp.cpp  WriterService.cpp  WriterService.h  native-lib.cpp  serverSocket.c  test.c
app/src/main/cpp/jnihelper/include/: Compiler.h  JNIHelp.h  SyncQueue.hpp  WriterService.h  hashnode.h  my_free.h  serverSocket.h  test.h
app/src/main/cpp/testmultone/: CMakeLists.txt  testone-lib.cpp
app/src/main/java/com/zkk/demo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/zkk/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
